Revert "Fix RES tooltips being hidden by header"
This reverts commit 4ad3672611abd6f245d946f95c1133933f07e105.

I broke the report function -_-

--- a/source/_base.scss
+++ b/source/_base.scss
@@ -736,7 +736,7 @@ a.choice[href$=controversial]:after {
 
 #header,
 body .modal {
-    z-index: 2;
+    z-index: 10000000
 }
 
 #sr-header-area {
